# bigz_bot

./: .gitignore  amvera.yml  pyproject.toml  requirements.txt
src/: main.py
src/api/: __init__.py  base_api.py  booking.py  schemas.py
src/core/: bot.py  config.py  db.py
src/handlers/: book.py  start.py
src/models/: user.py
src/services/: booking.py
