[project]
name = "bigz-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomax>=2.12.4",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.40",
    "aiosqlite>=0.21.0",
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
]
